fixed styling issues on mobile

--- a/client/styles.css
+++ b/client/styles.css
@@ -114,8 +114,8 @@ main {
 .img-container {
   grid-column: 8 / 11;
   grid-row: 1 / 4;
-  width: 110.38px;
-  height: 110.38px;
+  width: 100px;
+  height: 100px;
   border-radius: 10%;
   border: solid 2px rgb(241, 241, 241);
   overflow: hidden;
@@ -212,7 +212,20 @@ main {
   color: rgba(124, 246, 255, 0.733);
   cursor: pointer;
 }
-
+@media (min-width: 400px) {
+  .img-container {
+    width: 110.38px;
+    height: 110.38px;
+  }
+  .poke-card{
+    max-width: 412px!important;
+  }
+}
+@media (min-width: 576px) {
+  .poke-card{
+    max-width: 420px!important;
+  }
+}
 @media (min-width: 768px) {
 
 }
@@ -220,7 +233,7 @@ main {
   .text-container {
     width: 85%;
   }
-}
+  }
 @media (min-width: 1200px) {
   .text-container {
     width: 65%;
